--- a/FrontEnd/public/index.html
+++ b/FrontEnd/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>GSTB</title>
+    <title>Café with fen</title>
     <script src="https://kit.fontawesome.com/d6862fa655.js" crossorigin="anonymous"></script>
   </head>
   <body>
